# pyrethrum

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  dune-project  pyrethrum.opam
.github/workflows/: ci.yml  release.yml
lib/: ast.ml  config.ml  diagnostics.ml  dune  exhaustiveness.ml  parse.ml  pyrethrum.ml
lib/plugins/: dune  plugin.ml
lib/plugins/python/: dune  python_ast.ml  python_extract.ml  python_parse.ml  python_plugin.ml
test/: dune  test_pyrethrum.ml
